fix: Add python-multipart to requirements for form data handling

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,3 +24,6 @@ pydub
 
 # Pour interagir avec les API externes (Hugging Face, LogMeal)
 httpx
+
+# Nécessaire pour FastAPI pour gérer les données de formulaire (UploadFile)
+python-multipart
